tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs/amd/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs.errors.txt
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(2,3): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(2,3): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(3,5): error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json (3 errors) ====
    {
      "compilerOptions": {
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        "outFile": "test.js",
        ~~~~~~~~~
!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        "allowJs": true
      }
    }
    
==== DifferentNamesNotSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;
==== DifferentNamesNotSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled